kubernetes/minikube/frontend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: frontend
  name: frontend
spec:
  containers:
  - image: node:14.2-stretch-slim
    name: frontend
    workingDir: /workspace
    command: [ "npm", "run", "serve" ]
    volumeMounts:
    - mountPath: /workspace
      name: frontend
  volumes:
  - name: frontend
    hostPath:
      path: /hosthome/tomk/workspace/farmers-market/frontend
      type: Directory
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
