kubernetes/minikube/mailer-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: mailer
  name: mailer
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mailer
  strategy: {}
  template:
    metadata:
      labels:
        run: mailer
    spec:
      containers:
      - image: node:14.2-stretch-slim
        name: mailer
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 400m
            memory: 200Mi
        workingDir: /workspace
        command: [ "npm", "start" ]
        volumeMounts:
          - mountPath: /workspace
            name: mailer
      volumes:
        - name: mailer
          hostPath:
            path: /hosthome/tomk/workspace/farmers-market/mailer
            type: Directory
      dnsPolicy: ClusterFirst
status: {}
