kubernetes/minikube/server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      run: server
  strategy: {}
  template:
    metadata:
      labels:
        run: server
    spec:
      containers:
      - image: node:14.2-stretch-slim
        name: server
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 400m
            memory: 50Mi
        workingDir: /workspace
        command: [ "npm", "start" ]
        volumeMounts:
          - mountPath: /workspace
            name: server
      volumes:
        - name: server
          hostPath:
            path: /hosthome/tomk/workspace/farmers-market/server
            type: Directory
      dnsPolicy: ClusterFirst
status: {}
