kubernetes/minikube/server-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: server
  name: server
spec:
  containers:
  - image: node:14.2-stretch-slim
    name: server
    workingDir: /workspace
    command: [ "npm", "start" ]
    volumeMounts:
    - mountPath: /workspace
      name: server
  volumes:
  - name: server
    hostPath:
      path: /hosthome/tomk/workspace/farmers-market/server
      type: Directory
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
