kubernetes/minikube/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: frontend
  name: frontend
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 31372
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    run: frontend
  sessionAffinity: None
  type: LoadBalancer
