kubernetes/minikube/image-server-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: image-server
  name: image-server
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    run: image-server
  type: ClusterIP
