kubernetes/minikube/mailer-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: mailer
  name: mailer
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    run: mailer
  type: ClusterIP
