kubernetes/minikube/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: server
  name: server
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 32297
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    run: server
  type: NodePort
