kubernetes/minikube/image-server-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: image-server
spec:
  rules:
  - host: farmers.local
    http:
      paths:
      - path: /images
        pathType: Prefix
        backend:
          service:
            name: image-server
            port:
              name: http
