kubernetes/minikube/server-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: server
spec:
  rules:
  - host: farmers.local
    http:
      paths:
      - path: /api
        backend:
          serviceName: server
          servicePort: 80
